Allow passing external buffer to read